Modal changes, project recreated in "modules"
--- BR

Foram feitas mudanças no desing do modal e projeto foi recriado usando "modules". Os arquivos de css foram particionados para uma melhor legibilidade, assim como os arquivos js.

--- EN

Changes were made to the modal design and the project was recreated using "modules". The css files have been partitioned for better readability, as are the js files.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,14 +1,4 @@
-// Variables ========================
-$dark-background: rgb(12, 13, 14);
-$green: rgb(135, 221, 103);
-$font-white: rgb(232, 230, 227);
-
-// Mixins =======================
-@mixin organize-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+@import './mixinsAndVariables.scss';
 
 /* === Reset Global === */
 *,
@@ -129,116 +119,5 @@ body {
                 font-weight: 500;
             }
         }
-    }
-}
-
-/* MODAL ======================== */
-.modal-overlay {
-    width: 100%;
-    height: 100%;
-
-    background-color: rgba(0, 0, 0, 0.7);
-
-    position: fixed;
-    top: 0;
-
-    @include organize-center;
-
-    opacity: 0;
-    visibility: hidden;
-
-    z-index: 999;
-
-    &.active {
-        opacity: 1;
-        visibility: visible;
-
-        -webkit-animation: fade-in 0.3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-        animation: fade-in 0.3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-    }
-}
-
-.modal {
-    background: $dark-background;
-    padding: 2.4rem;
-
-    border-radius: 0.25rem;
-
-    position: relative;
-    z-index: 1;
-
-    #message {
-        color:$font-white;
-
-        max-width: 500px;
-
-        h2 {
-            margin-top: 0;
-
-            font-size: 2rem;
-            text-align: center;
-        }
-
-        p {
-            font-size: 1.5rem;
-
-            margin-top: 0.5rem;
-        }
-
-        .input-modal {
-            margin-top: 1.2rem;
-
-            &.action {
-                @include organize-center;
-
-                .button {
-
-                    width: 50%;
-
-                    &.confirm {
-                        color: $green;
-                        text-decoration: none;
-                        border: 2px rgb(56, 129, 29) solid;
-                        border-radius: 0.25rem;
-                        background-color: rgba(0, 0, 0, 0.501);
-
-                        height: 50px;
-
-                        @include organize-center;
-
-                        opacity: 0.6;
-
-                        &:hover {
-                            opacity: 1;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-/**
- * ----------------------------------------
- * animation fade-in for MODAL
- * ----------------------------------------
-*/
-@-webkit-keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
     }
 }
