--- a/styles/main.css
+++ b/styles/main.css
@@ -116,95 +116,4 @@ body::after {
   font-size: 24px;
   font-weight: 500;
 }
-
-/* MODAL ======================== */
-.modal-overlay {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 999;
-}
-
-.modal-overlay.active {
-  opacity: 1;
-  visibility: visible;
-  animation: fade-in 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
-.modal {
-  background: #0c0d0e;
-  padding: 2.4rem;
-  border-radius: 0.25rem;
-  position: relative;
-  z-index: 1;
-}
-
-.modal #message {
-  color: #e8e6e3;
-  max-width: 500px;
-}
-
-.modal #message h2 {
-  margin-top: 0;
-  font-size: 2rem;
-  text-align: center;
-}
-
-.modal #message p {
-  font-size: 1.5rem;
-  margin-top: 0.5rem;
-}
-
-.modal #message .input-modal {
-  margin-top: 1.2rem;
-}
-
-.modal #message .input-modal.action {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal #message .input-modal.action .button {
-  width: 50%;
-}
-
-.modal #message .input-modal.action .button.confirm {
-  color: #87dd67;
-  text-decoration: none;
-  border: 2px #38811d solid;
-  border-radius: 0.25rem;
-  background-color: rgba(0, 0, 0, 0.501);
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0.6;
-}
-
-.modal #message .input-modal.action .button.confirm:hover {
-  opacity: 1;
-}
-
-/**
- * ----------------------------------------
- * animation fade-in for MODAL
- * ----------------------------------------
-*/
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=main.css.map */
